Fix issue causing animations not to work at all on mobile

--- a/hawp-child/assets/sass/07-utilities/_a11y.scss
+++ b/hawp-child/assets/sass/07-utilities/_a11y.scss
@@ -26,11 +26,3 @@
 		top: 1em;
 	}
 }
-
-/* Reduced Motion ------------------------ */
-@media (prefers-reduced-motion) {
-	* {
-		transition-delay: 0s !important;
-		transition-duration: 0s !important;
-	}
-}
